enabled concatenated js flow for controllers and services and enabled less stylesheets

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="en" ng-app="app">
 <head>
-  <script src="<%= bowerlocation %>/angular/angular.js"></script>
-   <script src="<%= bowerlocation %>/angular-route/angular-route.js"></script>
-  <script src="app/javascripts/dist/app.js"></script>
+  <title>Page Title</title>
+
+  <link rel="stylesheet" href="./app/stylesheets/dist/main.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
 
   <div ng-view></div>
 
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="./app/javascripts/dist/dependencies.js"></script>
-  <script src="./app/javascripts/dist/app.js"></script>
+  <script src="./app/javascripts/dist/main.js"></script>
 </body>
 </html>
